--- a/client/src/Componentes/filterAz.css
+++ b/client/src/Componentes/filterAz.css
@@ -17,6 +17,7 @@ select {
     background-color: var(--darkgray);
     background-image: none;
     cursor: pointer;
+
 }
 
 /* Remove IE arrow */
@@ -32,6 +33,7 @@ select::-ms-expand {
     height: 3em;
     border-radius: .25em;
     overflow: hidden;
+    font-size: 12px;
 }
 
 /* Arrow */
