--- a/client/src/Componentes/home.css
+++ b/client/src/Componentes/home.css
@@ -3,7 +3,9 @@
     grid-template-columns: repeat(3, 1fr);
     grid-gap: 20px;
     grid-auto-rows: minmax(100px, auto);
-    padding: 10px;
+    padding-left: 70px;
+    padding-right: 70px;
+    padding-top: 20px;
 
 
 
@@ -18,9 +20,11 @@
 
 .imgCreate {
     max-width: 100px;
-    max-height: 1000px;
+    max-height: 70px;
     padding-bottom: 50px;
     padding-right: 20px;
+
+    padding-top: 10px;
 }
 
 .click1 {
@@ -31,19 +35,17 @@
 
 .padre {
     display: flex;
-    margin: 10px;
-    padding-bottom: 30px;
+
     justify-content: space-around;
 
     align-items: center;
-    height: 200px;
+    padding-bottom: 20px;
 }
 
 .Search-Bar {
-    display: flex;
+
     justify-content: center;
-    align-items: center;
-    padding-bottom: 20px;
+
 }
 
 .imgError {
@@ -59,7 +61,7 @@
     display: flex;
 
     justify-content: space-between;
-    align-items: center;
+
 
 
 }
